Fix certificate name overflowing
Instead of using a fixed height, it will now resize automatically to
the size of the certificate name.

--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -686,7 +686,6 @@
 			display: inline-block;
 			background: none;
 			border: 1.5px solid #7C9CD0;
-			height: 2em;
 			width: 60%;
 			margin-left: 3.5em;
 			border-radius: 5px;
